# Rotide

./: CMakeLists.txt  README.md
include/rotide/: rope.hpp
include/rotide/sys/: terminal.hpp  unicode.hpp
src/rotide/: main.c  main.cpp  rope.cpp
src/rotide/sys/: terminal.cpp
tests/: CMakeLists.txt  test-terminal.cpp
